appId: com.subnext.tipcalcbillsplit
---
- launchApp
- assertVisible: "Calculator"
- takeScreenshot: calculator-empty
- tapOn: "0.00"
- inputText: "100"
- hideKeyboard
- tapOn: "Bill & Tip"
- takeScreenshot: calculator-bill-entered
- tapOn: "15%"
- takeScreenshot: calculator-15-percent
- tapOn: "20%"
- takeScreenshot: calculator-20-percent
- tapOn: "Plus"
- takeScreenshot: calculator-split-2-people
- tapOn: "Etiquette, tab, 2 of 3"
- takeScreenshot: etiquette-screen
- tapOn: "Privacy, tab, 3 of 3"
- takeScreenshot: privacy-screen
